// MARK: - (TABS)
"HISTORY" = "history";
"DASHBOARD" = "dashboard";
"STATISTIC" = "stats";
"FACT" = "fact";
"INFO" = "about";



// MARK: - (AMOUNTS)
"TODAY" = "today";
"YESTERDAY" = "yesterday";

"THIS_DAY" = "this day";
"THIS_WEEK" = "this week";
"THIS_MONTH" = "this month";
"THIS_YEAR" = "this year";

"UNTIL_NOW" = "until now";
"UNTIL_THIS_DAY" = "until this day";



// MARK: - (TIME)
"SINCE_LAST_SMOKE" = "smokefree for";
"LONGEST_SMOKE_BREAK" = "longest break";
"AVERAGE_TIME_BETWEEN" = "time between smokes";



// MARK: - (STATS)
"PER_DAY" = "per day";
"PER_WEEK" = "per week";
"PER_MONTH" = "per month";
"PER_YEAR" = "per year";
"(TREND)" = "(trend)";



// MARK: - (FILE)
"EXPORT" = "export";
"IMPORT" = "import";
"OPEN_PORTER" = "open exporter";
"PICK_FORMAT" = "pick format";
"DAILY_FORMAT" = "daily";
"EXACT_FORMAT" = "exact";
"GROUPED_FORMAT" = "grouped";
"SMOKES_FILENAME" = "Smokes-Data";
"IMPORT_FAILED" = "Sorry, this format is unknown...";
"NO_PREVIEW" = "No Preview";
"INVALID_FORMAT_IMPORTERROR" = "Invalid format…";
"INVALID_URL_IMPORTERROR" = "URL error… Please try again";
"MISSING_PERMISSION_IMPORTERROR" = "Missing permission";



// MARK: - (INFO)
"APP_DESCRIPTION" = "We're here to help you get an overview of your smoking habit, and help you to overcome it!";
"LINKS" = "Links";
"WEBPAGE %@" = "Webpage > %@";
"SUPPORT %@" = "Support > %@";
"PRIVACY_POLICY %@" = "Privacy Policy > %@";
"CREDITS" = "Credits";
"DEVELOPERS %@" = "Developed by %@";
"DESIGNERS %@" = "Designed by %@";



// MARK: - (PLOTS)
"SHOW_PLOT" = "show plot";
"DATE" = "date";
"SMOKES" = "smokes";
"BY_DAY" = "by day";
"BY_WEEK" = "by week";
"BY_MONTH" = "by month";
"BY_YEAR" = "by year";



// MARK: - (ACTIONS)
"ADD" = "add";
"REMOVE" = "remove";
"MODIFY" = "modify";
"DISMISS" = "dismiss";
"SELECT_ALLTIME" = "alltime";
"PREVIOUS_DAY" = "previous day";
"NEXT_DAY" = "next day";
"PREVIOUS" = "previous";
"NEXT" = "next";
"PICK_DAY" = "pick day";



// MARK: - (OTHERS)
"LOADING" = "loading";
"NO_DESCRIPTION" = "no description";
"NO_DATA" = "No data";
"SMOKES_FACTs" = "Smokes' Facts";
"SKIP" = "skip";
"CONFIGURE" = "Configure";
"COMING_SOON" = "Coming Soon";
